Enhancements for 1.0 GA